--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,11 @@
         <param-value>en,ja</param-value>
     </context-param>
     <context-param>
+        <param-name>pass-through-directories</param-name>
+        <param-value>/javadoc,/oldjavadocs,/archive</param-value>
+    </context-param>
+
+    <context-param>
         <param-name>admin-path</param-name>
         <param-value>admin</param-value>
     </context-param>
@@ -21,16 +26,6 @@
         <param-name>decorators</param-name>
         <param-value>jika.decorators.MultilingualDecorator,jika.decorators.Html2JSPDecorator</param-value>
     </context-param>
-    <!--<filter>-->
-    <!--<filter-name>html2jsp</filter-name>-->
-    <!--<filter-class>jika.Html2JSP</filter-class>-->
-    <!--</filter>-->
-    <!--<filter-mapping>-->
-    <!--<filter-name>html2jsp</filter-name>-->
-    <!--<url-pattern>*.html</url-pattern>-->
-    <!--<dispatcher>REQUEST</dispatcher>-->
-    <!--<dispatcher>FORWARD</dispatcher>-->
-    <!--</filter-mapping>-->
     <filter>
         <filter-name>jika.servlets.Twitter4JXMLFilter</filter-name>
         <filter-class>jika.servlets.Twitter4JXMLFilter</filter-class>
@@ -41,7 +36,7 @@
     </filter-mapping>
     <filter>
         <filter-name>jikafilter</filter-name>
-        <filter-class>jika.JikaFilter</filter-class>
+        <filter-class>jika.filters.JikaFilter</filter-class>
         <init-param>
             <param-name>match-pattern</param-name>
             <param-value>.*(/|html|htm|jsp)$</param-value>
@@ -53,7 +48,6 @@
     </filter>
     <filter-mapping>
         <filter-name>jikafilter</filter-name>
-        <!--<url-pattern>/*</url-pattern>-->
         <url-pattern>/en/*</url-pattern>
         <url-pattern>/ja/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
@@ -71,47 +65,7 @@
         <url-pattern>/index.htm</url-pattern>
     </servlet-mapping>
 
-    <servlet>
-        <servlet-name>html2jsp</servlet-name>
-        <servlet-class>jika.servlets.Html2JSPServlet</servlet-class>>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>html2jsp</servlet-name>
-        <!--<url-pattern>*.*</url-pattern>-->
-        <url-pattern>/en/*.html</url-pattern>
-        <url-pattern>/ja/*.html</url-pattern>
-        <!--<url-pattern>/</url-pattern>-->
-    </servlet-mapping>
-
-    <!--<servlet>-->
-    <!--<servlet-name>JikaController</servlet-name>-->
-    <!--<servlet-class>jika.JikaController</servlet-class>-->
-    <!--<init-param>-->
-    <!--<param-name>controller-package</param-name>-->
-    <!--<param-value>jika.controllers</param-value>-->
-    <!--</init-param>-->
-    <!--</servlet>-->
-    <!--<servlet-mapping>-->
-    <!--<servlet-name>html2jsp</servlet-name>-->
-    <!--<url-pattern>*.css</url-pattern>-->
-    <!--</servlet-mapping>-->
-    <!--<servlet-mapping>-->
-    <!--<servlet-name>JikaController</servlet-name>-->
-    <!--<url-pattern>*.action</url-pattern>-->
-    <!--</servlet-mapping>-->
-    <!--<servlet-mapping>-->
-    <!--<servlet-name>JikaController</servlet-name>-->
-    <!--<url-pattern>*.ajax</url-pattern>-->
-    <!--</servlet-mapping>-->
-    <!--<welcome-file-list>-->
-    <!--<welcome-file>index.html</welcome-file>-->
-    <!--</welcome-file-list>-->
-    <!--<servlet>-->
-    <!--<servlet-name>default</servlet-name>-->
-    <!--<servlet-class>org.mortbay.jetty.servlet.Default</servlet-class>-->
-    <!--<init-param>-->
-    <!--<param-name>dirAllowed</param-name>-->
-    <!--<param-value>true</param-value>-->
-    <!--</init-param>-->
-    <!--</servlet>-->
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
 </web-app>
